Fix navbar collapse

--- a/client/css/aa_bootstrap.css
+++ b/client/css/aa_bootstrap.css
@@ -4293,7 +4293,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-toggle {
   position: relative;
-  float: right;
+  float: left;
   padding: 9px 10px;
   margin-top: 8px;
   margin-right: 15px;
